# trading

./: .gitignore  README.md  pyproject.toml
config/: crypto.toml  equities.toml
docs/: api-trading-venues.md  data-sources.md  experiments.md  glossary.md  options-data-vendors.md
journal/: alphasearch-trials.jsonl
scripts/: backfill_bars.py  backfill_downcap_bars.py  backfill_fundamentals.py  backfill_options_underlying_raw.py  build_cik_map.py  build_cik_map_historical.py  build_downcap_fundamentals.py  build_downcap_membership.py  build_equities_universe.py  build_insider_store.py  build_pit_membership.py  build_sic_map.py  ceiling_test.py  downcap_verify.py  dump_earnings_calendar.py  factor_regression.py  gather_options_iv.py  gen_golden_fixture.py  option_skew_analysis.py  options_coverage_report.py  signal_scan.py  skew_premium_study.py  verify_fundamentals.py
tests/: alphasearch_helpers.py  backtest_helpers.py  fundamentals_helpers.py  golden_helpers.py  sim_helpers.py  test_ablation_configs.py  test_ablation_equivalence.py  test_adapter_contract.py  test_alphasearch_cli.py  test_alphasearch_costs.py  test_alphasearch_evaluate.py  test_alphasearch_features.py  test_alphasearch_golden.py  test_alphasearch_insider.py  test_alphasearch_journal.py  test_alphasearch_lookahead.py  test_alphasearch_panel.py  test_alphasearch_robustness.py  test_alphasearch_robustness_golden.py  test_alphasearch_segments.py  test_alphasearch_segments_golden.py  test_alphasearch_sort.py  test_alphasearch_spec.py  test_alphasearch_stats.py  test_alphasearch_sweep.py  test_bare_mode.py  (+69 more)
(+140 files in other folders)
